implementation of extends marker for TypeInfo.hasImplicitParent